user updates working

--- a/src/app/components/admin/admin-manager-detail/admin-manager-detail.component.html
+++ b/src/app/components/admin/admin-manager-detail/admin-manager-detail.component.html
@@ -12,12 +12,12 @@
       </a>
     </li>
     <li role="presentation">
-      <a [routerLink]="['/admin/restaurant/', manager.restaurantId, 'driver']" class="btn">
+      <a [routerLink]="['/manager/restaurant/', manager.restaurantId, 'driver']" class="btn">
         View Drivers
       </a>
     </li>
     <li role="presentation">
-      <a [routerLink]="['/admin/restaurant/', manager.restaurantId, 'chef']" class="btn">
+      <a [routerLink]="['/manager/restaurant/', manager.restaurantId, 'chef']" class="btn">
         View Chefs
       </a>
     </li>
