--- a/src/app/components/driver/driver-list/driver-list.component.html
+++ b/src/app/components/driver/driver-list/driver-list.component.html
@@ -19,8 +19,8 @@
         </a>
       </li>
       <li role="presentation">
-        <a [routerLink]="['/admin/restaurant/', restaurantId, 'driver']" class="btn">
-          View drivers
+        <a [routerLink]="['/admin/restaurant/', restaurantId, 'chef']" class="btn">
+          View Chefs
         </a>
       </li>
       <li role="presentation">
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-xs-6 col-md-3">
           <div *ngIf="role === 'Admin'; else manager">
-            <a [routerLink]="['/admin', 'manager', driver._id]">
+            <a [routerLink]="['/admin', 'restaurant', restaurantId, 'driver', driver._id]">
               {{driver.firstName}} {{driver.lastName}}
               <span class="glyphicon glyphicon-edit"></span>
             </a>
