--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -203,6 +203,34 @@ ul.home li span {
 .how-to {
   margin-bottom: 80px;
 }
+
+.page-margin
+{
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  margin-top: 50px;
+  padding-top: 15px
+}
+.food-bottombuff
+{
+  margin-bottom: 70px;
+}
+
+.food-right
+{
+  text-align: right;
+}
+
+
+.food-center
+{
+  font-size: xx-large;
+}
+
+header .food-center {
+  padding: 0;
+}
 /* You can add global styles to this file, and also import other style files */
 
 /*#home_page_background {*/
