--- a/src/app/components/driver/driver-list/driver-list.component.html
+++ b/src/app/components/driver/driver-list/driver-list.component.html
@@ -44,7 +44,7 @@
       </li>
       <li role="presentation" class="active">
         <a [routerLink]="['/manager/restaurant/', restaurantId, 'driver']" class="btn">
-          View drivers
+          View Drivers
         </a>
       </li>
       <li role="presentation">
