--- a/src/app/components/chef/chef-edit/chef-edit.component.html
+++ b/src/app/components/chef/chef-edit/chef-edit.component.html
@@ -12,12 +12,12 @@
       </a>
     </li>
     <li role="presentation">
-      <a [routerLink]="['/manager/restaurant/', restaurantId, 'driver']" class="btn">
+      <a [routerLink]="['/admin/restaurant/', restaurantId, 'driver']" class="btn">
         View Drivers
       </a>
     </li>
     <li role="presentation"  class="active">
-      <a [routerLink]="['/manager/restaurant/', restaurantId, 'chef']" class="btn">
+      <a [routerLink]="['/admin/restaurant/', restaurantId, 'chef']" class="btn">
         View Chefs
       </a>
     </li>
